add: support a LouiseProxy for proxy request use